--- a/Pagina/productos.html
+++ b/Pagina/productos.html
@@ -42,6 +42,8 @@
     </header>
 
     <main class="mainProductos">
+
+        <!--
         <nav class="no-shadows" role="navigation">
             <div class="nav-wrapper no-shadows" id="barraCategorias">
                 <ul class="right hide-on-med-and-down barraCategorias">
@@ -68,10 +70,20 @@
                 <a href="#" data-target="nav-mobile2" class="right sidenav-trigger"><i
                         class="black-text material-icons green-text">settings</i></a>
             </div>
-        </nav>
+        </nav> -->
 
         <section class="row carritoCompras">
-            <article class="col s12 m3 row">
+            <br>
+            <br>
+            <nav>
+                <div class="nav-wrapper" id="breadcrumbs">
+                    <div class="col s12">
+                        <a href="index.html" class="breadcrumb">Inicio</a>
+                        <a href="productos.html" class="breadcrumb">Producto</a>
+                    </div>
+                </div>
+            </nav>
+            <article class="col s12 m3 row mt-2">
                 <div id="filtros" class="col s12 white green-text bottom center-align">
                     <div class="row">
                         <div id="todosLosProductos" class="col s12">Filtros</div>
@@ -139,7 +151,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <img class="center-block fotoCatalogo" src="img/bowlsimple.jpg" alt="Bowl - Simple - BioMountain" />
-                                <a class="btn-floating halfway-fab waves-effect waves-light green"><i
+                                <a href="carritoCompras.html" class="btn-floating halfway-fab waves-effect waves-light green"><i
                                         class="material-icons">add_shopping_cart</i></a>
                             </div>
                             <div class="card-content">
@@ -157,7 +169,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <img class="center-block fotoCatalogo" src="img/bandejadoble.jpg" alt="Bandeja - Doble - BioMountain" />
-                                <a class="btn-floating halfway-fab waves-effect waves-light green">
+                                <a href="carritoCompras.html" class="btn-floating halfway-fab waves-effect waves-light green">
                                     <i class="material-icons">add_shopping_cart</i>
                                 </a>
                             </div>
@@ -177,7 +189,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <img class="center-block fotoCatalogo" src="img/botella.jpg" alt="Botella - BioMountain" />
-                                <a class="btn-floating halfway-fab waves-effect waves-light green"><i
+                                <a href="carritoCompras.html" class="btn-floating halfway-fab waves-effect waves-light green"><i
                                         class="material-icons">add_shopping_cart</i></a>
                             </div>
                             <div class="card-content">
@@ -196,7 +208,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <img class="center-block fotoCatalogo" src="img/cubiertos.jpg" alt="Cubiertos - BioMountain" />
-                                <a class="btn-floating halfway-fab waves-effect waves-light green"><i
+                                <a href="carritoCompras.html" class="btn-floating halfway-fab waves-effect waves-light green"><i
                                         class="material-icons">add_shopping_cart</i></a>
                             </div>
                             <div class="card-content">
@@ -214,7 +226,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <img class="center-block fotoCatalogo" src="img/botella2.jpg" alt="Botella - BioMountain" />
-                                <a class="btn-floating halfway-fab waves-effect waves-light green"><i
+                                <a href="carritoCompras.html" class="btn-floating halfway-fab waves-effect waves-light green"><i
                                         class="material-icons">add_shopping_cart</i></a>
                             </div>
                             <div class="card-content">
@@ -233,7 +245,7 @@
                         <div class="card">
                             <div class="card-image">
                                 <img class="center-block fotoCatalogo" src="img/bandejasimple.jpg" alt="Bandejas - Simples - BioMountain" />
-                                <a class="btn-floating halfway-fab waves-effect waves-light green"><i
+                                <a href="carritoCompras.html" class="btn-floating halfway-fab waves-effect waves-light green"><i
                                         class="material-icons">add_shopping_cart</i></a>
                             </div>
                             <div class="card-content">
@@ -258,7 +270,7 @@
                     <div class="card">
                         <div class="card-image">
                             <img class="center-block fotoCatalogo" src="img/bolsaBiodegradable.jpg" alt="Bolas - Biodegradables - BioMountain" />
-                            <a class="btn-floating halfway-fab waves-effect waves-light green"><i
+                            <a href="carritoCompras.html" class="btn-floating halfway-fab waves-effect waves-light green"><i
                                     class="material-icons">add_shopping_cart</i></a>
                         </div>
                         <div class="card-content">
@@ -275,7 +287,7 @@
                     <div class="card">
                         <div class="card-image">
                             <img class="center-block fotoCatalogo" src="img/vasobiodegradable.jpg" alt="Vaso - Biodegradable - BioMountain" />
-                            <a class="btn-floating halfway-fab waves-effect waves-light green">
+                            <a href="carritoCompras.html" class="btn-floating halfway-fab waves-effect waves-light green">
                                 <i class="material-icons">add_shopping_cart</i>
                             </a>
                         </div>
@@ -293,7 +305,7 @@
                     <div class="card">
                         <div class="card-image">
                             <img class="center-block fotoCatalogo" src="img/vasotermico.jpg" alt="Vaso - Termico - BioMountain" />
-                            <a class="btn-floating halfway-fab waves-effect waves-light green">
+                            <a href="carritoCompras.html" class="btn-floating halfway-fab waves-effect waves-light green">
                                 <i class="material-icons">add_shopping_cart</i>
                             </a>
                         </div>
