--- a/Pagina/sucursales.html
+++ b/Pagina/sucursales.html
@@ -96,27 +96,27 @@
             </div>
 
             <section class="">
-                <h3 class="ventajas">PUNTOS DE VENTA</h3>
+                <h5 class="ventajas">PUNTOS DE VENTA</h5>
                 <div class="container">
                     <div class="section">
                         <div class="row">
                             <div class="col s12 m4">
-                                <h5 class="center">CABA: Humboldt 590 - Ramos Mejía</h5>
+                                <h7 class="center">CABA: Humboldt 590 - Villa Crespo</h7>
                             </div>
                             <div class="col s12 m4">
-                                <h5 class="center">Jujuy: Gdor. José María Fascio 1020 - S. S. de Jujuy</h5>
+                                <h7 class="center">Jujuy: Gdor. José María Fascio 1020 - S. S. de Jujuy</h7>
                             </div>
                             <div class="col s12 m4">
-                                <h5 class="center">Chubut: Julio Argentino Roca 799 - Trelew</h5>
+                                <h7 class="center">Chubut: Julio Argentino Roca 799 - Trelew</h7>
                             </div>
                             <div class="col s12 m4">
-                                <h5 class="center">Mendoza: Suipacha 800 - Mendoza Capital</h5>
+                                <h7 class="center">Mendoza: Suipacha 800 - Mendoza Capital</h7>
                             </div>
                             <div class="col s12 m4">
-                                <h5 class="center">Neuquén: Gualeguay 348 - Neuquén</h5>
+                                <h7 class="center">Neuquén: Gualeguay 348 - Neuquén</h7>
                             </div>
                             <div class="col s12 m4">
-                                <h5 class="center">Salta: Santiago del Estero 2099 - Salta</h5>
+                                <h7 class="center">Salta: Santiago del Estero 2099 - Salta</h7>
                             </div>
                         </div>
                     </div>
